--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,12 +16,12 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+      run: docker build -t bot-war .
 
     - name: Run tests
-      run: docker run my-image-name:$(date +%s) npm test
+      run: docker run bot-war npm test
 
-    - name: Push the Docker image
+    - name: Deploy
       run: |
-        docker tag my-image-name:$(date +%s) m4x4w/my-image-name:latest
-        docker push m4x4w/my-image-name:latest
+        docker tag bot-war m4x4w/bot-war:latest
+        docker push m4x4w/bot-war:latest
